# QTSimpleAPP

./: CMakeLists.txt
include/controllers/: incrementController.h
include/models/: incrementModel.h
include/views/: incrementView.h  mainWindow.h
src/: main.cpp  mainOld.cpp
src/controllers/: incrementController.cpp
src/models/: incrementModel.cpp
src/views/: incrementView.cpp
styles/: CMakeLists.txt  styles.css  styles.qrc
